# libffi_experimental

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  compile.sh  gitattributes  old_sample.apls  test.apls
TestLib/src/: lib.c
ffiw/: Build_Function.aplf  Build_Struct.aplf  ex.apln  types.apln
src/: lib.rs
